--- a/back_end/.gitignore
+++ b/back_end/.gitignore
@@ -1,14 +1,3 @@
-# Ignore compiled Python files
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-
-# Ignore migration files
-/migrations/*.pyc
-/migrations/*.pyo
-/migrations/__pycache__/
-
-# Ignore modified Python cache files
-back_end/back_end/__pycache__/
-back_end/testing/__pycache__/
+# Ignore backend specific files
+back_end/__pycache__/
+testing/__pycache__/
